# MCP_Server

./: .env  .env.example  README.md  activate_env.sh  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_server.sh  server.py
adapters/: __init__.py  auth.py  calendar.py  retry.py  workers.py
lifecycle/: __init__.py  handler.py
router/: __init__.py  idempotency.py  queue.py
services/: audit.py  config.py  notifications.py  secrets.py  telemetry.py
tests/: test_adapters.py  test_tools.py  test_transport.py
tools/: __init__.py  registry.py  schemas.py  validators.py
transport/: __init__.py  auth.py  gateway.py
