# Python project configuration
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-google-calendar-server"
version = "0.1.0"
description = "MCP Server for Google Calendar integration"
authors = [
    {name = "Fernando Torres", email = "fertorresnavarrete@gmail.com"}
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--asyncio-mode=auto"